# rust-spotiferris

./: .gitignore  Cargo.toml  README.md  run_tests  server
migrations/: 20210117141248_create_songs.sql  20220109085313_add_file_to_songs.sql  20220109085313_add_filename_to_songs.sql
migrations/2019-01-02-065845_create_songs/: up.sql
public/: 404.html
public/css/: main.css
public/js/: main.js
src/: api.rs  handlers.rs  lib.rs  main.rs  models.rs  routes.rs  routing.rs  schema.rs
templates/: layout.html
templates/songs/: edit.html  index.html  new.html  show.html
tests/: integration.rs  test_models.rs
