[package]
name = "spotiferris"
version = "0.1.0"
authors = ["Andrew Radev <andrey.radev@gmail.com>"]
edition = "2021"

[dependencies]
futures           = "0.3.25"
futures-util      = "0.3.25"
actix-web         = "4.2.1"
actix-session     = { version = "0.7.2", features = ["cookie-session"] }
actix-files       = "0.6.2"
actix-multipart   = "0.4.0"
chrono            = { version = "0.4.23", features = ["serde"] }
env_logger        = "0.10.0"
log               = "0.4.17"
http              = "0.2.8"
serde             = { version = "1.0", features = ["derive"] }
askama            = "0.11.1"
dotenv            = "0.15.0"
id3               = "1.5.1"
mp3-duration      = "0.1.10"
url               = "2.3.1"
sanitize-filename = "0.4.0"
sqlx              = { version = "0.6.2", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "chrono", "migrate"] }
